# sidera

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_skill_columns.py  003_add_failed_runs.py  004_add_action_types.py  005_add_hierarchy_columns.py  006_add_role_memory.py  007_add_auto_execute.py  008_add_conversation_threads.py  009_add_org_chart_tables.py  010_skill_evolution.py  011_add_users_rbac.py  012_add_meeting_sessions.py  013_add_lesson_memory_type.py  014_add_role_messages.py  015_add_memory_consolidation.py  016_add_clearance_and_agent_relationships.py  017_add_claude_code_tasks.py  018_add_claude_code_task_action_type.py  019_add_role_proposal_action_type.py  020_add_stewardship.py  021_vocabulary_and_goals.py  022_department_scoped_channels.py  023_add_document_sync.py  024_add_webhook_events.py  025_add_learning_channels.py  026_add_working_group_sessions.py  027_enable_rls.py  028_add_skill_references.py  029_add_memory_performance_indexes.py
dashboard/: app.py  sample_data.py
dashboard/.streamlit/: config.toml
demo/: build_pptx.py  pitch-deck.html
docs/: adding-a-channel.md  architecture-decisions.md  backup-strategy.md  database-schema.md  execution-flows.md  progress.md  skill-creation-guide.md
docs/onboarding/: 01-Executive-Overview.md  02-How-It-Works.md  03-The-AI-Workforce.md  04-Cost-Estimates.md  05-Getting-Started.md
scripts/: backup_db.sh  check_connections.py  clear_cache.py  create_tables.py  demo.py  doc_sync.py  export_audit_log.py  md_to_docx.py  provision_company.sh  restore_db.sh  rotate_encryption_key.py  seed_admin.py  seed_test_data.py  test_health_check.py  trigger_briefing.py
src/: config.py
src/agent/: api_client.py  core.py  injection_defense.py  prompts.py  tool_registry.py
src/api/: app.py
src/bootstrap/: __init__.py  classifier.py  crawler.py  executor.py  extractor.py  generator.py  models.py  prompts.py  refiner.py
src/cache/: __init__.py  decorators.py  redis_client.py  service.py
src/claude_code/: __init__.py  executor.py  orchestrator.py  task_manager.py
src/connectors/: bigquery.py  computer_use.py  google_ads.py  google_drive.py  meta.py  recall_ai.py  retry.py  slack.py  ssh.py
src/db/: service.py  session.py
src/llm/: __init__.py  anthropic_provider.py  openai_compat_provider.py  provider.py  router.py
src/mcp_servers/: actions.py  bigquery.py  claude_code_actions.py  code_execution.py  computer_use.py  context.py  delegation.py  evolution.py  google_ads.py  google_drive.py  helpers.py  meeting.py  memory.py  messaging.py  meta.py  orchestration.py  skill_runner.py  slack.py  ssh.py  system.py  web.py  working_group.py  write_safety.py
src/mcp_stdio/: __init__.py  __main__.py  bridge.py  meta_tools.py  server.py
src/meetings/: __init__.py  session.py
src/middleware/: __init__.py  auth.py  logging_config.py  rate_limiter.py  rbac.py  request_logging.py  sentry_setup.py
src/models/: normalized.py  schema.py
src/plugins/: __init__.py  loader.py  mcp_client.py
src/skills/: __init__.py  anthropic_compat.py  auto_execute.py  consolidation.py  db_loader.py  department_infra.py  document_sync.py  evolution.py  executor.py  manager.py  memory.py  portability.py  reflection_evolution.py  registry.py  role_evolution.py  role_portability.py  role_router.py  router.py  schema.py  working_group.py
src/templates/: connector_template.py  mcp_server_template.py  oauth_route_template.py  (+2 more)
tests/: conftest.py
(+200 files in other folders)
