[project]
name = "sidera"
version = "0.1.0"
description = "Sidera — AI agent framework for building approval-gated AI employees"
license = {text = "MIT"}
authors = [{name = "Michael Zola"}]
readme = "README.md"
keywords = ["ai", "agent", "framework", "automation", "slack", "mcp"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/mzola/sidera"
Repository = "https://github.com/mzola/sidera"
Issues = "https://github.com/mzola/sidera/issues"
dependencies = [
    # Anthropic API (direct calls — no Agent SDK needed)
    "anthropic>=0.45.0",

    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Cache
    "redis>=5.0.0",

    # Workflow orchestration
    "inngest>=0.4.0",

    # Ad platform APIs
    "google-ads>=25.0.0",
    "facebook-business>=21.0.0",
    "google-cloud-bigquery>=3.25.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.25.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",

    # Slack
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.33.0",

    # Skills
    "pyyaml>=6.0.0",

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "cryptography>=42.0.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.10.0",

    # MCP server (Claude Code integration)
    "mcp>=1.2.0",

    # Monitoring
    "sentry-sdk[fastapi]>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "fakeredis>=2.21.0",
    "aiosqlite>=0.20.0",
    "pre-commit>=4.0.0",
]
dashboard = [
    "streamlit>=1.41.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["src/templates/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E402"]  # Alembic puts imports after revision vars

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
